--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -1,48 +1,40 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="../../css/adapter.css" />
+    <link rel="stylesheet" type="text/css" href="../../css/adapter.css"/>
     <link rel="stylesheet" type="text/css" href="../../lib/css/materialize.css">
     <script type="text/javascript" src="../../lib/js/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="../../socket.io/socket.io.js"></script>
     <script type="text/javascript" src="../../js/translate.js"></script>
     <script type="text/javascript" src="../../lib/js/materialize.js"></script>
     <script type="text/javascript" src="../../js/adapter-settings.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css"/>
     <script type="text/javascript" src="words.js"></script>
 
     <script type="text/javascript">
-        function load(settings, onChange) {
-            // example: select elements with id=key and class=value and insert value
+        function load(settings, onChange){
             if (!settings) return;
-            $('.value').each(function () {
+            $('.value').each(function (){
                 var $key = $(this);
                 var id = $key.attr('id');
-                if ($key.attr('type') === 'checkbox') {
-                    // do not call onChange direct, because onChange could expect some arguments
+                if ($key.attr('type') === 'checkbox'){
                     $key.prop('checked', settings[id])
-                        .on('change', () => onChange())
-                        ;
+                        .on('change', () => onChange());
                 } else {
-                    // do not call onChange direct, because onChange could expect some arguments
                     $key.val(settings[id])
                         .on('change', () => onChange())
-                        .on('keyup', () => onChange())
-                        ;
+                        .on('keyup', () => onChange());
                 }
             });
             onChange(false);
-            // reinitialize all the Materialize labels on the page if you are dynamically adding inputs:
             if (M) M.updateTextFields();
         }
 
-        // This will be called by the admin adapter when the user presses the save button
-        function save(callback) {
-            // example: select elements with class=value and build settings object
+        function save(callback){
             var obj = {};
-            $('.value').each(function () {
+            $('.value').each(function (){
                 var $this = $(this);
-                if ($this.attr('type') === 'checkbox') {
+                if ($this.attr('type') === 'checkbox'){
                     obj[$this.attr('id')] = $this.prop('checked');
                 } else {
                     obj[$this.attr('id')] = $this.val();
@@ -56,14 +48,14 @@
 
 <body>
 
-    <div class="m adapter-container">
+<div class="m adapter-container">
 
-        <div class="row">
-            <div class="col s12 m4 l2">
-                <img src="exchangerates.png" class="logo">
-            </div>
+    <div class="row">
+        <div class="col s12 m4 l2">
+            <img src="exchangerates.png" class="logo" alt="logo">
         </div>
     </div>
+</div>
 
 </body>
 
