--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -21,17 +21,15 @@
     <div class="row col m12">
         <div class="input-field col s3">
             <select id="source" class="value">
-                <option value="1" class="translate">cbr</option>
-                <option value="2" class="translate">ecb</option>
+                <option value="0" class="translate">CBR</option>
+                <option value="1" class="translate">ECB</option>
+                <option value="2" class="translate">POL</option>
             </select>
             <label class="translate">source</label>
         </div>
     </div>
-    <div class="row col m12">
-		<div id="curlist" class="col">
-	        <!--<input id="cur" type="checkbox" class="value"/>-->
-	        <!--<label for="cur"><span class="translate" data-lang="cur">cur</span></label>-->
-		</div>
+    <div id="lists" class="row col m12">
+		
     </div>
 </div>
 </body>
